# components/apimgt/org.wso2.carbon.apimgt.keymgt/src/main/java/org/wso2/carbon/apimgt/keymgt/model/entity/API.java
@@ -48,7 +48,6 @@ public class API implements CacheableEntity<String> {
     private boolean isDefaultVersion = false;
     private String securityScheme;
     private String revisionId;
-    private String environment;
     private Map<String, String> apiProperties = new HashMap<>();
     private List<OperationPolicy> apiPolicies = new ArrayList<>();
     private boolean isSubscriptionValidationDisabled = false;
@@ -342,14 +341,6 @@ public class API implements CacheableEntity<String> {
 
     public void setRevisionId(String revisionId) {
         this.revisionId = revisionId;
-    }
-
-    public String getEnvironment() {
-        return environment;
-    }
-
-    public void setEnvironment(String environment) {
-        this.environment = environment;
     }
 
     public String getSecurityScheme() {
